package vehicle;

public interface IControllable {
}
