package vehicle;

public interface ISnowPlow {
}
