package Vehicle;

public interface IScoreOwner {
}
