package states;

public class SnowyState {
}
